cmake_minimum_required(VERSION 3.20)
project(windbg_agent VERSION 1.0.5 LANGUAGES CXX)

# Generate version.h from template — single source of truth for version numbers
configure_file(version.h.in "${CMAKE_CURRENT_BINARY_DIR}/version.h" @ONLY)

# C++ Standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Static runtime for Release builds (no MSVC DLL dependencies)
# Debug and other configs use default dynamic runtime
set(CMAKE_MSVC_RUNTIME_LIBRARY "$<IF:$<CONFIG:Release>,MultiThreaded,$<IF:$<CONFIG:Debug>,MultiThreadedDebugDLL,MultiThreadedDLL>>")

# Windows-specific settings
if(NOT WIN32)
    message(STATUS "windbg_agent only builds on Windows - skipping")
    return()
endif()

# Add libagents if building standalone (not part of monorepo)
# EXCLUDE_FROM_ALL: we only need fastmcpp_core from this tree; skip building
# claude_sdk, copilot_sdk_cpp, libagents CLIs/examples which windbg_agent does
# not link against.
if(NOT TARGET libagents)
    add_subdirectory(external/libagents EXCLUDE_FROM_ALL)
endif()

# Fetch cpp-httplib for HTTP server and CLI
include(FetchContent)
FetchContent_Declare(
    cpp_httplib
    GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
    GIT_TAG v0.15.3
)
FetchContent_MakeAvailable(cpp_httplib)

# windbg_agent DLL
add_library(windbg_agent SHARED
    main.cpp
    output_capture.cpp
    settings.cpp
    dml_output.cpp
    windbg_client.cpp
    dbg_trace.cpp
    http_server.cpp
    mcp_server.cpp
)

# Module definition file: forces undecorated export names on Win32 (x86)
target_sources(windbg_agent PRIVATE windbg_agent.def)

# Link with libagents and Windows debugging libraries
target_link_libraries(windbg_agent
    PRIVATE
        fastmcpp_core     # MCP server library (via libagents/claude-agent-sdk-cpp)
        dbgeng            # Debugging Engine API
        dbghelp           # Debug Help Library
        ws2_32            # Winsock for HTTP server
)

# Include httplib headers (no OpenSSL needed for localhost) and generated version.h
target_include_directories(windbg_agent PRIVATE ${cpp_httplib_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

# Export symbols for WinDbg extension callbacks
target_compile_definitions(windbg_agent PRIVATE
    _WINDOWS
    UNICODE
    _UNICODE
)

# Set output name without lib prefix
set_target_properties(windbg_agent PROPERTIES
    PREFIX ""
    OUTPUT_NAME "windbg_agent"
)

# Standalone tests may live under this repo or the top-level tests/windbg directory.
set(WINDBG_TESTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tests")
if(NOT EXISTS "${WINDBG_TESTS_DIR}/session_restore_test.cpp")
    set(WINDBG_TESTS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../tests/windbg")
endif()


# Repro test for MCP tool visibility issue
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/repro/CMakeLists.txt")
    add_subdirectory(repro)
endif()

# ============================================================================
# HTTP server CLI executable (off by default; monorepo enables it)
# ============================================================================
option(BUILD_CLI "Build windbg_agent CLI executable" OFF)

if(BUILD_CLI)
    add_executable(windbg_agent_cli
        cli/main.cpp
    )

    target_include_directories(windbg_agent_cli PRIVATE
        ${cpp_httplib_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_BINARY_DIR}
    )

    # nlohmann_json comes via libagents subdirectory (fetched there)
    target_link_libraries(windbg_agent_cli PRIVATE
        nlohmann_json
        ws2_32
    )

    set_target_properties(windbg_agent_cli PROPERTIES
        OUTPUT_NAME "windbg_agent"
    )
endif()

